--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -60,17 +60,23 @@ nav {
   background: white;
   font-size: 1.333em;
   border: 15px solid #F6F6F6;
-  width: 50%;
   padding: 10px 30px;
   position: fixed;
-  top: 80px;
-  left: 25%; }
+  top: 80px; }
   .raw-data .close {
     color: #7ED321;
     position: absolute;
     top: 10px;
     right: 30px;
     font-size: 20px; }
+  @media screen and (max-width: 699px) {
+    .raw-data {
+      width: 90%;
+      left: 5%; } }
+  @media screen and (min-width: 700px) {
+    .raw-data {
+      width: 50%;
+      left: 25%; } }
 
 section header {
   background: #F6F6F6;
